# blocking-bookshelf

./: .gitignore  .gitmodules  Makefile  README.md  addr.c  block.conf  blocktimer.h  handle_errors.c  main.c  meson.build  meson_options.txt  parse_config.c
open-rc/: blocktimer  blocktimer.in
src/: addr.c  blocktimer.h  debug.c  main.c  meson.build  parse_config.c  waitforwakeup.c
systemd/: blocktimer.service.in
